# agent-transport

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  package-lock.json
crates/agent-transport-python/: Cargo.toml  pyproject.toml
crates/agent-transport-python/adapters/agent_transport/audio_stream/livekit/: __init__.py
crates/agent-transport-python/adapters/agent_transport/audio_stream/pipecat/: __init__.py  audio_stream_transport.py  processors.py
crates/agent-transport-python/adapters/agent_transport/audio_stream/pipecat/transports/: websocket.py
crates/agent-transport-python/adapters/agent_transport/observability/: __init__.py  _env.py  _pipeline_introspect.py  _recorder.py  _uploader.py
crates/agent-transport-python/adapters/agent_transport/sip/livekit/: __init__.py  _aio_utils.py  _audio_source.py  _room_facade.py  _session_teardown.py  audio_stream_io.py  audio_stream_server.py  judging.py  observability.py  server.py
crates/agent-transport-python/adapters/agent_transport/sip/pipecat/: __init__.py  processors.py  sip_transport.py
crates/agent-transport-python/adapters/agent_transport/sip/pipecat/transports/: sip.py
crates/agent-transport-python/src/: lib.rs
crates/agent-transport-python/tests/: conftest.py  test_audio_stream_teardown.py  test_endcalltool_full_flow.py  test_force_shutdown_agent_session.py  test_init_recording_no_mutate.py  test_jobcontext_identity.py  test_jobcontext_methods.py  test_livekit_close_session_services.py  test_livekit_post_session_judging.py  test_livekit_server_event_loop.py  test_observability_tag_injection.py  test_pause_resume_state.py  test_pipecat_observability.py  test_pipecat_pause_resume.py  test_pipecat_sample_rate.py  test_pipecat_ws_event_loop.py  test_post_answer_events.py  test_server_shutdown_cleanup.py  test_setup_async.py  test_transport_room_cleanup.py
docs/: compile.md  features.md  livekit_interface_sip.md
e2e/: README.md  audio_stream_node_smoke.mjs  audio_stream_smoke.py  headless_sip_node_smoke.mjs  headless_sip_smoke.py
examples/: cli_phone.py  livekit_sip_agent.py  pipecat_audio_stream_agent.py  (+1 more)
(+160 files in other folders)
