[workspace]
resolver = "2"
members = [
    "crates/pjsua-sys",
    "crates/beep-detector",
    "crates/agent-transport",
    "crates/agent-transport-python",
    "crates/agent-transport-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/bevenky/agent_transport"

[workspace.dependencies]
beep-detector = { path = "crates/beep-detector" }
thiserror = "2"
tracing = "0.1"
crossbeam-channel = "0.5"
anyhow = "1"
tracing-subscriber = "0.3"
